# litc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml  config.toml.example  todo
.github/workflows/: ci.yml
crates/litc-cli/: Cargo.toml
crates/litc-cli/src/: main.rs
crates/litc-core/: Cargo.toml
crates/litc-core/src/: lib.rs
crates/litc-ffi/: Cargo.toml
crates/litc-ffi/examples/: example.c
crates/litc-ffi/include/: litc.h
crates/litc-ffi/src/: lib.rs
crates/litc-gui/: Cargo.toml
crates/litc-gui/src/: lib.rs  main.rs
crates/litc-keystore/: Cargo.toml
crates/litc-keystore/src/: lib.rs
crates/litc-lightwallet/: Cargo.toml
crates/litc-lightwallet/src/: lib.rs
crates/litc-miner/: Cargo.toml
crates/litc-miner-gpu-wgpu/: Cargo.toml
crates/litc-miner-gpu-wgpu/src/: lib.rs
crates/litc-miner/src/: lib.rs
crates/litc-node/: Cargo.toml
crates/litc-node/src/: lib.rs  main.rs  rpc.rs
crates/litc-pow/: Cargo.toml
crates/litc-pow/examples/: bench.rs
crates/litc-pow/src/: lib.rs
crates/litc-primitives/: Cargo.toml
crates/litc-primitives/src/: lib.rs  mldsa.rs
crates/litc-store/: Cargo.toml
crates/litc-store/src/: lib.rs  state.rs
crates/litc-wallet/: Cargo.toml
crates/litc-wallet/src/: lib.rs
crates/litc-wire/: Cargo.toml
crates/litc-wire/src/: lib.rs
docs/: PHILOSOPHY.md  benchmarks.md  cake-wallet.md  cli.md  ffi.md  index.md  mining.md  ml-dsa-migration.md  pow.md  protocol.md  reproducible-builds.md  roadmap.md  rpc.md  running-a-node.md  specification.md  state.md  stealth.md  uri.md  wallet.md  wots.md
