[package]
name = "litc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "litc"
path = "src/main.rs"

[dependencies]
litc-node = { path = "../litc-node" }
litc-wallet = { path = "../litc-wallet" }
litc-keystore = { path = "../litc-keystore" }
litc-store = { path = "../litc-store" }
litc-core = { path = "../litc-core" }
litc-primitives = { path = "../litc-primitives" }
