[package]
name = "litc-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "litc-gui"
path = "src/main.rs"

[dependencies]
egui = "0.27"
eframe = "0.27"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
litc-primitives = { path = "../litc-primitives" }
litc-pow = { path = "../litc-pow" }
litc-keystore = { path = "../litc-keystore" }
